<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@drawable/ic_contct_bg"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:padding="30dp">

        <TextView
            android:textAlignment="textEnd"
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="46dp"
            android:text="@string/keep"/>

        <TextView
            android:textAlignment="center"
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView4"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="101dp"
            android:text="@string/cases"/>

        <TextView
            android:scaleType="fitCenter"
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView5"
            android:layout_marginTop="86dp"
            android:text="@string/address"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="300dp"
            android:layout_height="200dp"
            android:layout_below="@+id/imageView6"
            android:layout_marginTop="93dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_maps"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/imageView7"
            android:layout_marginTop="117dp"
            app:srcCompat="@drawable/ic_sosmed" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView8"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="94dp"
            android:text="@string/scan"/>

        <ImageView
            android:scaleType="fitXY"
            android:id="@+id/imageView10"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_below="@+id/imageView9"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            app:srcCompat="@drawable/ic_barcode" />

        <TextView
            android:textAlignment="center"
            android:id="@+id/imageView11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView10"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="81dp"
            android:text="@string/visit"/>

        <ImageView
            android:id="@+id/imageView12"
            android:scaleType="fitCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView11"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="137dp"
            app:srcCompat="@drawable/icon_kalam" />
    </RelativeLayout>
</ScrollView>